--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "url": "https://github.com/andela-ookoro/DocumentMGT",
     "type": "public"
   },
-  "dependencies": {},
+  "dependencies": {
+    "pg": "^6.2.4",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.1.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.0.0",
