feat(DbModel): create user, document, accessright, role model - write test user, document, accessright, role model - create user, document, accessright, role model [Delivers 147063801]

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "cele",
     "password": "smilesh2o",
-    "database": "docMGT",
+    "database": "docmgt",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
