--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "url": "https://github.com/andela-ookoro/DocumentMGT",
     "type": "public"
   },
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register server/__test__/model/*.spec.js"
+  },
   "dependencies": {
+    "babel-register": "^6.24.1",
+    "bcrypt": "^1.0.2",
+    "expect": "^1.20.2",
+    "faker": "^4.1.0",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "coveralls": "^2.13.1",
     "dotenv-webpack": "^1.5.0",
     "eslint": "^4.0.0",
@@ -24,6 +35,7 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "expect": "^1.20.2",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
@@ -32,13 +44,10 @@
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "document",
     "management"
   ],
-  "author": "",
+  "author": "okoro okwudiri",
   "license": "ISC"
 }
