--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "type": "public"
   },
   "scripts": {
+    "start": "nodemon --watch server --exec babel-node  -- server.js",
+    "start:dev": "nodemon ./bin/www",
     "test": "mocha --compilers js:babel-core/register server/__test__/model/*.spec.js"
   },
   "dependencies": {
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
     "expect": "^1.20.2",
     "faker": "^4.1.0",
     "pg": "^6.2.4",
@@ -36,7 +39,11 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "expect": "^1.20.2",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "i": "^0.3.5",
+    "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "opn": "^5.1.0",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
