--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "scripts": {
     "start": "nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
-    "test": "mocha --compilers js:babel-core/register server/__test__/model/*.spec.js"
+    "test": "mocha --compilers js:babel-core/register server/__test__/controllers/*.spec.js"
   },
   "dependencies": {
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.0",
     "expect": "^1.20.2",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^7.4.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0"
@@ -31,6 +37,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
     "dotenv-webpack": "^1.5.0",
     "eslint": "^4.0.0",
@@ -40,6 +48,7 @@
     "eslint-plugin-react": "^7.0.1",
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.1.2",
+    "http": "0.0.0",
     "i": "^0.3.5",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
@@ -47,6 +56,7 @@
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
