--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expect": "^1.20.2",
     "faker": "^4.1.0",
     "history": "^4.6.2",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
@@ -37,7 +38,8 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.1.0",
-    "thunk": "0.0.1"
+    "thunk": "0.0.1",
+    "tinymce": "^4.6.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
