feat(auth): logout - display logout link - clear user information and JWT from localstorage [Delivers #148120609]

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "start": "nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
-    "test": "babel-node ./node_modules/istanbul/lib/cli cover _mocha -- --compilers js:babel-core/register ./server/__test__/**/*.spec.js"
+    "test": "babel-node ./node_modules/istanbul/lib/cli cover _mocha -- --timeout 90000 --compilers js:babel-core/register ./server/__test__/controllers/documents.spec.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-eslint": "^7.2.3",
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
@@ -22,8 +23,10 @@
     "expect": "^1.20.2",
     "faker": "^4.1.0",
     "history": "^4.6.2",
+    "html-react-parser": "^0.3.5",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
@@ -32,12 +35,14 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.1.0",
+    "sinon": "^2.3.6",
     "thunk": "0.0.1",
     "tinymce": "^4.6.4"
   },
@@ -45,6 +50,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.4",
@@ -68,6 +74,7 @@
     "http": "0.0.0",
     "i": "^0.3.5",
     "istanbul": "^0.4.5",
+    "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
