--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "dotenv-webpack": "^1.5.0",
+    "enzyme": "^2.9.1",
     "eslint": "^4.0.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
