--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js: "stable"
 install: npm install
+before_script:
+  - npm install -g sequelize-cli
 script: npm test
 after_success:
   - npm install -g codeclimate-test-reporter
