--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "type": "public"
   },
   "scripts": {
-    "start": "nodemon --watch server --exec babel-node  -- server.js",
+    "start": "babel-node  -- server.js",
+    "dev": "nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
     "test-client": "jest  --config jest.config.js -u ",
     "test-e2e": "nightwatch",
     "acceptaneTest": "run-p -r start  test-e2e",
-    "test": "babel-node nyc mocha -- --timeout 90000 --compilers js:babel-core/register ./server/__test__/controllers/documents.spec.js"
+    "pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test sequelize db:migrate",
+    "test": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test PORT=3000 nyc --reporter=html --reporter=text mocha --timeout 90000 --compilers js:babel-register -- ./server/__tests__/**/*.spec.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -24,6 +26,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "chromedriver": "^2.30.1",
+    "compression": "^1.7.0",
     "docxtemplater": "^3.1.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.0",
@@ -34,6 +37,7 @@
     "fs": "0.0.1-security",
     "generate-docx": "^1.3.0",
     "hammerjs": "^2.0.8",
+    "helmet": "^3.6.1",
     "history": "^4.6.2",
     "html-react-parser": "^0.3.5",
     "jquery": "^3.2.1",
@@ -83,6 +87,7 @@
     "babel-register": "^6.24.1",
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
+    "codecov": "^2.2.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
