--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,17 +7,13 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "use_env_variable": "DATABASE_URL",
+    "logging": false,
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "DATABASE_URL",
+    "logging": false,
     "dialect": "postgres"
   }
 }
