--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "chromedriver": "^2.30.1",
@@ -46,22 +45,16 @@
     "faker": "^4.1.0",
     "file-saver": "^1.3.3",
     "fs": "0.0.1-security",
-    "generate-docx": "^1.3.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.6.1",
     "history": "^4.6.2",
     "html-react-parser": "^0.3.5",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
-    "jszip": "^2.6.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.99.0",
-    "nightwatch-cucumber": "^7.1.10",
     "npm-run-all": "^4.0.2",
     "npm-run-parallel": "^0.5.0",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "passport-local": "^1.0.0",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "phantomjs-prebuilt": "^2.1.14",
@@ -75,14 +68,10 @@
     "redux": "^3.7.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "selenium-server": "^3.4.0",
     "sequelize": "^4.1.0",
-    "sinon": "^2.3.6",
-    "socket.io": "^2.0.3",
     "thunk": "0.0.1",
     "tinymce": "^4.6.4",
-    "toastr": "^2.1.2",
-    "validate.js": "^0.11.1"
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "chai": "^4.0.2",
@@ -92,7 +81,6 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "cucumber": "^2.3.1",
-    "dotenv-webpack": "^1.5.0",
     "enzyme": "^2.9.1",
     "eslint": "^4.0.0",
     "eslint-config-airbnb": "^15.0.1",
