--- a/package.json
+++ b/package.json
@@ -72,7 +72,14 @@
     "sequelize": "^4.1.0",
     "thunk": "0.0.1",
     "tinymce": "^4.6.4",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.6.1",
+    "style-loader": "^0.18.2",
+    "extract-text-webpack-plugin": "^2.1.2"
   },
   "devDependencies": {
     "chai": "^4.0.2",
@@ -89,7 +96,6 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "expect": "^1.20.2",
-    "extract-text-webpack-plugin": "^2.1.2",
     "http": "0.0.0",
     "i": "^0.3.5",
     "istanbul": "^0.4.5",
@@ -100,17 +106,11 @@
     "node-sass": "^4.5.3",
     "nyc": "^11.0.2",
     "opn": "^5.1.0",
-    "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
     "sass-loader": "^6.0.5",
     "selenium-server": "^3.4.0",
     "sinon": "^2.3.6",
-    "style-loader": "^0.18.2",
-    "supertest": "^3.0.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "supertest": "^3.0.0"
   },
   "keywords": [
     "document",
