--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv-webpack": "^1.5.0",
     "expect": "^1.20.2",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
     "file-saver": "^1.3.3",
     "fs": "0.0.1-security",
@@ -63,23 +64,22 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-form-validate": "^1.0.3",
+    "react-hot-loader": "^1.3.1",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.7.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.1.0",
+    "sequelize": "^4.3.1",
+    "style-loader": "^0.18.2",
     "thunk": "0.0.1",
     "tinymce": "^4.6.4",
     "toastr": "^2.1.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "^15.6.1",
-    "style-loader": "^0.18.2",
-    "extract-text-webpack-plugin": "^2.1.2"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
