--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "babel-node  -- server.js",
-    "dev": " NODE_ENV=production nodemon --watch server --exec babel-node  -- server.js",
+    "dev": "  nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
     "test-client": "jest  --config jest.config.js -u ",
     "test-e2e": "nightwatch",
@@ -79,7 +79,9 @@
     "toastr": "^2.1.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5"
   },
   "devDependencies": {
     "chai": "^4.0.2",
@@ -103,12 +105,10 @@
     "mocha": "^3.4.2",
     "nightwatch": "^0.9.16",
     "nightwatch-cucumber": "^7.1.10",
-    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.2",
     "opn": "^5.1.0",
     "redux-mock-store": "^1.2.3",
-    "sass-loader": "^6.0.5",
     "selenium-server": "^3.4.0",
     "sinon": "^2.3.6",
     "supertest": "^3.0.0"
