--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.17.2",
     "chromedriver": "^2.30.1",
     "compression": "^1.7.0",
+    "css-loader": "^0.28.4",
     "docxtemplater": "^3.1.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.0",
@@ -55,6 +56,7 @@
     "lodash": "^4.17.4",
     "materialize-css": "^0.99.0",
     "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "npm-run-parallel": "^0.5.0",
     "pg": "^6.2.4",
@@ -72,6 +74,7 @@
     "redux": "^3.7.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.5",
     "sequelize": "^4.3.1",
     "style-loader": "^0.18.2",
     "thunk": "0.0.1",
@@ -79,9 +82,7 @@
     "toastr": "^2.1.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
@@ -89,7 +90,6 @@
     "codecov": "^2.2.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
     "cucumber": "^2.3.1",
     "enzyme": "^2.9.1",
     "eslint": "^4.0.0",
