chore(documentation) write readme - write readme - edit server test to pass new updated [Delivers #148827379]

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-node_modules
+node_modules/
 .Ds_Store
 .env
 lcov-report/
 coverage/
 learn
 lcov.info
-bower_components
+bower_components/
 reports
-.nyc_ouput
+.nyc_output/
+.vscode/
