--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,7 +4,8 @@
     "password": "smilesh2o",
     "database": "docmgt",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "use_env_variable": "DATABASE_URL",
