--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "scripts": {
     "start": "babel-node server.js",
     "build": "webpack --config webpack.config.js",
-    "dev": "nodemon --watch server --exec babel-node  -- server.js",
+    "dev": "NODE_ENV=development nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
-    "test-client": "jest  --config jest.config.js -u ",
+    "client-test": "jest  --config jest.config.js -u ",
     "test-e2e": "nightwatch",
     "acceptaneTest": "run-p -r start  test-e2e",
-    "pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test sequelize db:migrate",
-    "test": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test PORT=3000 nyc --reporter=html --reporter=text mocha --timeout 900000 --compilers js:babel-register -- ./server/tests/controllers/users.spec.js"
+    "server-pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=development sequelize db:migrate ",
+    "server-test": "npm run server-pretest && DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=development PORT=3000 nyc  mocha --require ./server/tests/testSetup.js --timeout 900000 --compilers js:babel-register -- ./server/tests/**/*.spec.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -41,12 +41,14 @@
     "body-parser": "^1.17.2",
     "chromedriver": "^2.30.1",
     "compression": "^1.7.0",
+    "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.4",
     "docxtemplater": "^3.1.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.0",
     "expect": "^1.20.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
     "file-saver": "^1.3.3",
@@ -86,8 +88,7 @@
     "toastr": "^2.1.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "compression-webpack-plugin": "^0.4.0"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
