--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: "6"
 install: npm install
 before_script:
   - npm install -g sequelize-cli
-script: npm server-test
+script: npm run server-test
 after_success:
   - npm install -g codeclimate-test-reporter
   - cat ./lcov.info | ./node_modules/coveralls/bin/coveralls.js
