--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "scripts": {
     "start": "babel-node server.js",
-    "build": "webpack --config webpack.config.js",
-    "dev": "NODE_ENV=development nodemon --watch server --exec babel-node  -- server.js",
+    "local:build": "webpack --config webpack.config.js",
+    "dev": "nodemon --watch server --exec babel-node  -- server.js",
     "start:dev": "nodemon ./bin/www",
+    "build": "npm run clean && npm run build:server && npm run build:client",
+    "clean": "rimraf lib && mkdir lib && mkdir lib/docs/",
+    "build:client": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
+    "build:server": "babel server -d lib/server --copy-files --ignore tests/",
     "client-test": "jest  --config jest.config.js -u ",
     "e2e-test": "nightwatch",
-    "acceptaneTest": "run-p -r start  test-e2e",
+    "acceptanceTest": "run-p -r start  test-e2e",
     "server-pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=development sequelize db:migrate ",
     "server-test": "npm run server-pretest && DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=development PORT=3000 nyc  mocha --require ./server/tests/testSetup.js --timeout 900000 --compilers js:babel-register -- ./server/tests/**/*.spec.js"
   },
