--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clean": "rimraf lib && mkdir lib && mkdir lib/docs/",
     "build:client": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
     "build:server": "babel server -d lib/server --copy-files --ignore tests/",
-    "client-test": "jest  --config jest.config.js -u ",
+    "client-test": "jest  --config jest.config.js -u  && npm run client-coverage",
+    "client-coverage": "codecov --token=1ae99ab6-3079-408d-98c6-0176d944efbb",
     "e2e-test": "nightwatch",
     "acceptanceTest": "run-p -r start  test-e2e",
     "server-pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test sequelize db:migrate ",
@@ -83,6 +84,8 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.5",
     "sequelize": "^4.3.1",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "style-loader": "^0.18.2",
     "thunk": "0.0.1",
     "tinymce": "^4.6.4",
