--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "copy:apiDocs": "cp -a public/apidoc/. lib/public/apidoc/ && npm run copy:publicfiles",
     "copy:publicfiles": "cp -a public/{index.html,logo.png,favicon.ico} lib/public/ && cp -a public/lib lib/public",
     "build:server": "babel server -d lib/server --copy-files --ignore tests/ && npm run build-app",
+    "build-server-test": "babel server/tests -d lib/server/tests --copy-files",
     "build-app": "babel server.js -d lib --copy-files",
     "client-test": "jest  --config jest.config.js -u  && npm run client-coverage",
     "client-coverage": "codecov --token=1ae99ab6-3079-408d-98c6-0176d944efbb",
     "e2e-test": "nightwatch",
     "acceptanceTest": "run-p -r start  test-e2e",
     "server-pretest": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test sequelize db:migrate ",
-    "server-test": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test PORT=3000 nyc  mocha --require ./server/tests/testSetup.js --timeout 900000 --compilers js:babel-register -- ./server/tests/**/*.spec.js | coveralls"
+    "server-test": "DATABASE_URL=postgres://sdneoiwa:CGgqmi-vCzC2IFd3dJWpcxwhj3mrAjMe@pellefant.db.elephantsql.com:5432/sdneoiwa NODE_ENV=test PORT=3000 nyc   mocha  --timeout 900000 lib/server/tests/**/*.spec.js && npm run server-coverage",
+    "server-coverage": "cat ./coverage/lcov.info | coveralls &&    CODECLIMATE_REPO_TOKEN=33f7f674f8634b68e03ec8d38f95097fa7e30e4b68340b1daa2344678849b0c8 codeclimate-test-reporter < lcov.info"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -117,10 +119,11 @@
     "jest": "^20.0.4",
     "jest-environment-jsdom": "^20.0.3",
     "mocha": "^3.4.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "nightwatch": "^0.9.16",
     "nightwatch-cucumber": "^7.1.10",
     "nodemon": "^1.11.0",
-    "nyc": "^11.0.2",
+    "nyc": "^11.0.3",
     "opn": "^5.1.0",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
